[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/display/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/display/icons/missile.png" type="Texture" id=3]
[ext_resource path="res://assets/display/icons/icon_mine.png" type="Texture" id=4]
[ext_resource path="res://assets/display/icons/rocket.png" type="Texture" id=5]
[ext_resource path="res://assets/display/icons/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://assets/display/icons/energy_bar_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/display/icons/ballistic.png" type="Texture" id=8]
[ext_resource path="res://assets/display/icons/nuke.png" type="Texture" id=9]
[ext_resource path="res://assets/display/fonts/font_theme_tiny.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/display/icons/heart.png" type="Texture" id=11]
[ext_resource path="res://assets/display/fonts/font_theme_large.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/display/icons/ballistic_missile.png" type="Texture" id=13]
[ext_resource path="res://player/speedometer.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/display/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 30
use_mipmaps = true
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Player" type="Spatial" groups=["player"]]
script = ExtResource( 2 )

[node name="VC" type="ViewportContainer" parent="."]
margin_right = 1920.0
margin_bottom = 540.0

[node name="V" type="Viewport" parent="VC"]
size = Vector2( 960, 540 )
handle_input_locally = false
msaa = 1
fxaa = true
debanding = true
render_target_update_mode = 3
shadow_atlas_size = 128

[node name="CanvasLayer" type="CanvasLayer" parent="VC/V"]

[node name="Speedometer" parent="VC/V/CanvasLayer" instance=ExtResource( 14 )]
anchor_left = 0.017
anchor_top = 0.724
anchor_right = 0.224
anchor_bottom = 0.767
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="VC/V/CanvasLayer"]
visible = false
anchor_left = 0.005
anchor_top = 0.805
anchor_right = 0.1
anchor_bottom = 0.883
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Label1" type="Label" parent="VC/V/CanvasLayer/GridContainer"]
margin_right = 166.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "100 km/hr"

[node name="Label2" type="Label" parent="VC/V/CanvasLayer/GridContainer"]
margin_left = 186.0
margin_right = 217.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 10 )
text = "ferf"

[node name="Label3" type="Label" parent="VC/V/CanvasLayer/GridContainer"]
margin_left = 237.0
margin_right = 248.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 10 )
text = "3
"

[node name="Label4" type="Label" parent="VC/V/CanvasLayer/GridContainer"]
margin_left = 268.0
margin_right = 268.0
margin_bottom = 43.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 10 )

[node name="HeadUpDisplay" type="Node2D" parent="VC/V/CanvasLayer"]

[node name="icon_mine_old" type="TextureProgress" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 121.0
margin_top = 20.0
margin_right = 843.0
margin_bottom = 748.0
rect_scale = Vector2( 0.105, 0.105 )
step = 1.005
value = 50.25
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 7 )
fill_mode = 1

[node name="icon_rocket" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 121.0
margin_top = 21.0
margin_right = 843.0
margin_bottom = 749.0
rect_scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_mine" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 121.0
margin_top = 21.0
margin_right = 843.0
margin_bottom = 749.0
rect_scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_missile" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 120.0
margin_top = 20.0
margin_right = 842.0
margin_bottom = 742.0
rect_scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_ballistic" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 120.0
margin_top = 20.0
margin_right = 842.0
margin_bottom = 743.0
rect_scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_ballistic_missile" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 120.0
margin_top = 20.0
margin_right = 842.0
margin_bottom = 743.0
rect_scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 13 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_nuke" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay"]
visible = false
margin_left = 120.0
margin_top = 20.0
margin_right = 331.0
margin_bottom = 233.0
rect_scale = Vector2( 0.36, 0.36 )
rect_clip_content = true
texture = ExtResource( 9 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="TextureProgress" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_left = 127.0
margin_top = 1.0
margin_right = 375.0
margin_bottom = 85.0
rect_scale = Vector2( 0.25, 2.9 )
value = 100.0
texture_progress = ExtResource( 7 )
tint_progress = Color( 1, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="TextureProgress" parent="VC/V/CanvasLayer/HeadUpDisplay"]
show_behind_parent = true
margin_left = 20.0
margin_top = 12.0
margin_right = 416.0
margin_bottom = 65.0
rect_scale = Vector2( 0.16, 1.75 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 6 )
tint_progress = Color( 1, 0.423529, 0, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="TextureRect" parent="VC/V/CanvasLayer/HeadUpDisplay/health"]
show_behind_parent = true
margin_left = -51.0
margin_top = 5.0
margin_right = 722.0
margin_bottom = 734.667
rect_scale = Vector2( 0.7, 0.06 )
texture = ExtResource( 11 )

[node name="label_lives_left" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_left = 9.0
margin_top = -33.0
margin_right = 96.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 0.682353 )
custom_fonts/font = ExtResource( 12 )
text = "3
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_player_name" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_right = 103.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Player x: y"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_player_1_pos" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_left = 40.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 40, 20 )
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1

[node name="label_player_2_pos" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_left = 20.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 20, 10 )
custom_fonts/font = SubResource( 5 )
text = "2"
align = 1

[node name="label_player_3_pos" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_right = 40.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 10 )
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
valign = 1

[node name="label_player_4_pos" type="Label" parent="VC/V/CanvasLayer/HeadUpDisplay"]
margin_right = 40.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 10 )
custom_fonts/font = SubResource( 3 )
text = "4"
align = 1
valign = 1

[node name="TimerUpdateSpeedometer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimerUpdateHUD" type="Timer" parent="."]
autostart = true

[node name="TimerCheckDestroyedVehicle" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="TimerUpdateSpeedometer" to="." method="_on_TimerUpdateSpeedometer_timeout"]
[connection signal="timeout" from="TimerUpdateHUD" to="." method="_on_TimerUpdateHUD_timeout"]
[connection signal="timeout" from="TimerCheckDestroyedVehicle" to="." method="_on_TimerCheckDestroyedVehicle_timeout"]
